--- a/toppaltest/src/views/players/index.html
+++ b/toppaltest/src/views/players/index.html
@@ -31,7 +31,7 @@
         <td>{{description}}</td>
         <td>
             <a class="btn" href="player_{{id}}"><i class="icon-pencil"></i> {{#i18n}}Edit{{/i18n}}</a>
-            <a class="btn" href="#" onclick="deletePlayer('{{id}}', '{{title}}')"><i class="icon-remove"></i> {{#i18n}}Delete{{/i18n}}</a>
+            <a class="btn" href="#" onclick="deletePlayer('{{id}}', '{{name}}')"><i class="icon-remove"></i> {{#i18n}}Delete{{/i18n}}</a>
     </tr>
     {{/allPlayers}}
     </tbody>
