--- a/toppaltest/src/views/players/edit.html
+++ b/toppaltest/src/views/players/edit.html
@@ -73,7 +73,7 @@
 
     <div class="control-group">
         <div class="controls">
-            <button type="button" class="btn btn-success" id="saveNewPlayerButton" onclick="saveNewPlayer({{id}});">{{#i18n}}Save{{/i18n}}</button>
+            <button type="button" class="btn btn-success" id="saveNewPlayerButton" onclick="saveNewPlayer();">{{#i18n}}Save{{/i18n}}</button>
         </div>
     </div>
 </form>
