--- a/toppaltest/src/views/players/index.html
+++ b/toppaltest/src/views/players/index.html
@@ -30,7 +30,7 @@
         <td>{{status}}</td>
         <td>{{description}}</td>
         <td>
-            <a class="btn" href="player_{{id}}"><i class="icon-pencil"></i> {{#i18n}}Edit{{/i18n}}</a>
+            <a class="btn" href="addevent_{{id}}"><i class="icon-pencil"></i> {{#i18n}}Edit{{/i18n}}</a>
             <a class="btn" href="#" onclick="deletePlayer('{{id}}', '{{name}}')"><i class="icon-remove"></i> {{#i18n}}Delete{{/i18n}}</a>
     </tr>
     {{/allPlayers}}
