--- a/toppaltest/src/views/_common/header.html
+++ b/toppaltest/src/views/_common/header.html
@@ -87,25 +87,27 @@
                         var datanose=null;
                          datanose =$("#dialog-form").data("opener");
 
-//                        var bValid = true;
-//                        allFields.removeClass( "ui-state-error" );
-//
-//                        bValid = bValid && checkLength( name, "username", 3, 16 );
-//                        bValid = bValid && checkLength( priority, "priority", 1, 1 );
-//                        bValid = bValid && checkLength( status, "status", 5, 16 );
-//
-//                        bValid = bValid && checkRegexp( name, /^[a-z]([0-9a-z_])+$/i, "Username may consist of a-z, 0-9, underscores, begin with a letter." );
-//                        bValid = bValid && checkRegexp( priority, /^([0-5])+$/i, "Username may consist of a-z, 0-9, underscores, begin with a letter." );
+                        var bValid = true;
+                        allFields.removeClass( "ui-state-error" );
+
+                        bValid = bValid && checkLength( name, "username", 3, 16 );
+                        bValid = bValid && checkLength( date, "priority", 1, 16 );
+                        bValid = bValid && checkLength( priority, "priority", 1, 1 );
+                        bValid = bValid && checkLength( status, "status", 3, 16 );
+
+                        bValid = bValid && checkRegexp( name, /^[a-z]([0-9a-z_])+$/i, "Username may consist of a-z, 0-9, underscores, begin with a letter." );
+                        bValid = bValid && checkRegexp( priority, /^([0-5])+$/i, "Priority only can be a number betwen 1 to 5" );
+                        bValid = bValid && checkRegexp( status, /^(Pending|Progress|Done)+$/i, "Priority only can be a Pending or Progress or Done" );
 //                        // From jquery.validate.js (by joern), contributed by Scott Gonzalez: http://projects.scottsplayground.com/email_address_validation/
 //                        bValid = bValid && checkRegexp( email, /^((([a-z]|\d|[!#\$%&'\*\+\-\/=\?\^_`{\|}~]|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])+(\.([a-z]|\d|[!#\$%&'\*\+\-\/=\?\^_`{\|}~]|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])+)*)|((\x22)((((\x20|\x09)*(\x0d\x0a))?(\x20|\x09)+)?(([\x01-\x08\x0b\x0c\x0e-\x1f\x7f]|\x21|[\x23-\x5b]|[\x5d-\x7e]|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])|(\\([\x01-\x09\x0b\x0c\x0d-\x7f]|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF]))))*(((\x20|\x09)*(\x0d\x0a))?(\x20|\x09)+)?(\x22)))@((([a-z]|\d|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])|(([a-z]|\d|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])([a-z]|\d|-|\.|_|~|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])*([a-z]|\d|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])))\.)+(([a-z]|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])|(([a-z]|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])([a-z]|\d|-|\.|_|~|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])*([a-z]|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])))\.?$/i, "eg. ui@jquery.com" );
 //                        bValid = bValid && checkRegexp( password, /^([0-9a-zA-Z])+$/, "Password field only allow : a-z 0-9" );
 
-                        if ($("#saveNewPlayerForm").valid() == true ) {
-                            alert ('valid');
+//                        if ($("#saveNewPlayerForm").valid() == true ) {
+//                            alert ('valid');
+//
+//                        }else{alert ('not valid')}
 
-                        }else{alert ('not valid')}
-
-                        //if ( bValid ) {
+                        if ( bValid ) {
                             if ((typeof datanose=="string") || (typeof datanose=="number")) {
                                 var a= saveEvent(datanose);
                             }else{
@@ -113,7 +115,7 @@
                             }
 
                             $( this ).dialog( "close" );
-                       // }
+                        }
                     },
                     Cancel: function() {
                         $( this ).dialog( "close" );
@@ -134,7 +136,7 @@
                         status.val("");
                         description.val("");
                         id=null;
-                        $("#saveNewPlayerForm").validate();
+
                         $("#dialog-form").dialog("open").data("opener",id)
                         $( "#dialog-form" ).dialog( "open" );
                     });
