--- a/toppaltest/src/views/players/index.html
+++ b/toppaltest/src/views/players/index.html
@@ -31,6 +31,7 @@
     {{/allPlayers}}
 
     <div id="dialog-form" title="Create new Event">
+        <p class="validateTips">All form fields are required.</p>
         <form class="form-horizontal" name="saveNewPlayerForm" id="saveNewPlayerForm" method="post" style="clear:both;float;left;">
             <!--<input type="hidden" name="_METHOD" value="PUT">-->
             <div class="control-group">
